--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "name": "somehooks",
-  "description": "SomeHooks",
+  "description": "Framework agnostic hooks",
   "license": "Apache-2.0",
   "main": "./dist/hooks.js",
+  "type": "module",
   "types": "./dist/hooks.d.ts",
   "scripts": {
     "install": "tsc --build ./src/tsconfig.json",
+    "lint": "prettier --write ./",
+    "test": "tsc --build ./src/tsconfig.test.json && karma start ./karma.conf.cjs"
   },
   "devDependencies": {
-    "karma": "^4.0.1",
-    "karma-chrome-launcher": "^2.0.0",
+    "@open-wc/karma-esm": "^2.4.3",
+    "@types/jasmine": "^3.9.1",
+    "esm": "^3.2.25",
+    "jasmine-core": "^3.9.0",
+    "karma": "^6.3.4",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^4.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-sauce-launcher": "^2.0.2",
-    "karma-sourcemap-loader": "^0.3.7",
+    "prettier": "^2.4.1",
     "typescript": "^4.3.5"
   }
 }
+
