Project import generated by Copybara.
PiperOrigin-RevId: 402334011

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,9 +1,9 @@
 name: SomeHooks CI
 on:
   push:
-    branches: [ main ]
+    branches: [ dev ]
   pull_request:
-    branches: [ main ]
+    branches: [ dev ]
 jobs:
   build:
     runs-on: ubuntu-latest
