--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -12,7 +12,7 @@
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "outDir": "../test",
+    "outDir": "../dist",
     "sourceMap": true,
     "strict": true,
     "strictNullChecks": true,
