--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "somehooks",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Framework agnostic hooks",
   "license": "Apache-2.0",
   "main": "./dist/somehooks.js",
@@ -22,6 +22,10 @@
     "karma-jasmine": "^4.0.1",
     "prettier": "^2.4.1",
     "typescript": "^4.3.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/taylor-vann/somehooks.git"
   }
 }
 
